--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nprogress": "^0.2.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-dropzone": "^11.0.1",
     "react-intl": "^3.4.0",
     "react-spinkit": "^3.0.0"
   },
